# backend

./: .pre-commit-config.yaml  pyproject.toml
app/: config.py  main.py  routes.py  startup.py
app/processing/: __init__.py  pipeline.py
notebooks/: clean.ipynb  data_exploration.ipynb  data_research.ipynb  demonstration.ipynb  navec_embedding.ipynb  tags.ipynb
pickles/: popularities.pickle
